--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     </header>
     <div class="hero-section border">
         <div class="hero-msg">
-            <p>You are on Amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a href="https://www.amazon.in>Click here to go to amazon.in</a></p>
-        </div> 
+            <p>You are on Amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a>Click here to go to amazon.in</a></p>
+        </div>
     </div>
     <div class="shop-section">
         <div class="box1 box border">
