--- a/index.html
+++ b/index.html
@@ -31,9 +31,15 @@
                     </div>
         
             </div>
-            <div class="nav-signin border">
+            <div class="nav-signin ">
                 <p><span>Hello, sign in</span></p>
                 <p class="nav-sec">Account & Lists</p>
+                <button onclick="redirectToLogin()">Sign in</button>
+    <script>
+        function redirectToLogin() {
+            window.location.href = 'login.html';
+        }
+    </script>
             </div>
             <div class="nav-return border">
                 <p><span>Returns</span></p>
@@ -63,11 +69,11 @@
     </header>
     <div class="hero-section border">
         <div class="hero-msg">
-            <p>You are on Amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a>Click here to go to amazon.in</a></p>
+            <p>You are on Amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a class="amazon-link" href="https://www.amazon.in" target="_blank">Click here to go to Amazon.in</a></p>
         </div>
     </div>
     <div class="shop-section">
-        <div class="box1 box border">
+        <div class="box1 box ">
             <div class="box-content">
                 <h2>Clothes</h2>
             <div class="box-img" style="background-image: url('box1_image.jpg');"></div>
