--- a/index.html
+++ b/index.html
@@ -76,52 +76,52 @@
         <div class="box1 box ">
             <div class="box-content">
                 <h2>Clothes</h2>
-            <div class="box-img" style="background-image: url('box1_image.jpg');"></div>
+            <div class="box-img"> <a href="https://www.amazon.com/s/?_encoding=UTF8&k=Tops&rh=p_36%3A-2500&rnid=2661611011&ref=sr_nr_p_36_5&ref_=pd_hp_d_atf_unk"><img src="box1_image.jpg" height="300px" width="300px"/> </a></div>
                <p>See More</p>
             </div>
             
         </div>
         <div class="box2 box"><div class="box-content">
             <h2>Health & Personal Care</h2>
-        <div class="box-img" style="background-image: url('box2_image.jpg');"></div>
+        <div class="box-img"> <a href="https://www.amazon.com/s?bbn=16225010011&rh=i%3Aspecialty-aps%2Cn%3A%2116225010011%2Cn%3A3760941&ref_=nav_em__nav_desktop_sa_intl_health_care_0_2_16_3"> <img src="box2_image.jpg" height="300px" width="300px"/></a></div>
            <p>See More</p>
         </div>
     </div>
         <div class="box3 box"><div class="box-content">
             <h2>Furniture</h2>
-        <div class="box-img" style="background-image: url('box3_image.jpg');"></div>
+        <div class="box-img"> <a href="https://www.amazon.com/s?bbn=16225011011&rh=i%3Aspecialty-aps%2Cn%3A%2116225011011%2Cn%3A1063306&ref_=nav_em__nav_desktop_sa_intl_furniture_0_2_17_6"> <img src="box3_image.jpg" height="300px" width="300px"/></a></div>
            <p>See More</p>
         </div>
     </div>
         <div class="box4 box"><div class="box-content">
             <h2>Electronics</h2>
-        <div class="box-img" style="background-image: url('box4_image.jpg');"></div>
+        <div class="box-img"> <a href="https://www.amazon.com/s?bbn=16225009011&rh=i%3Aspecialty-aps%2Cn%3A%2116225009011%2Cn%3A541966&ref_=nav_em__nav_desktop_sa_intl_computers_and_accessories_0_2_5_6"> <img src="box4_image.jpg" height="300px" width="300px"/> </a></div>
            <p>See More</p>
         </div>
     </div>
     <div class="box1 box">
         <div class="box-content">
             <h2>Beauty picks</h2>
-        <div class="box-img" style="background-image: url('box5_image.jpg');"></div>
+        <div class="box-img"> <a href="https://www.amazon.com/s/?_encoding=UTF8&k=health%20and%20beauty&i=beauty-intl-ship&crid=2036DM6EKNYNA&sprefix=health%20and%20beauty%2Cbeauty-intl-ship%2C173&ref=nb_sb_noss_2&pd_rd_w=GgRGC&content-id=amzn1.sym.68f2b66e-afdb-4a19-b88c-555da04d6dc2&pf_rd_p=68f2b66e-afdb-4a19-b88c-555da04d6dc2&pf_rd_r=WMBA2HY72T0ZS9RXFBA6&pd_rd_wg=bYoNU&pd_rd_r=f16943bf-3c0a-450a-85bf-bf2a8b27defb&ref_=pd_hp_d_atf_unk"> <img src="box5_image.jpg" height="300px" width="300px"/></a></div>
            <p>See More</p>
         </div>
         
     </div>
     <div class="box2 box"><div class="box-content">
         <h2>Pet Care</h2>
-    <div class="box-img" style="background-image: url('box6_image.jpg');"></div>
+    <div class="box-img"> <a href="https://www.amazon.com/s?bbn=16225013011&rh=i%3Aspecialty-aps%2Cn%3A%2116225013011%2Cn%3A2975312011&ref_=nav_em__nav_desktop_sa_intl_dogs_0_2_21_2"> <img src="box6_image.jpg" height="300px" width="300px"/></a></div>
        <p>See More</p>
     </div>
 </div>
     <div class="box3 box"><div class="box-content">
         <h2>New Arrivals </h2>
-    <div class="box-img" style="background-image: url('box7_image.jpg');"></div>
+    <div class="box-img"> <a href="https://www.amazon.com/gp/goldbox?ref_=nav_cs_gb"> <img src="box7_image.jpg" height="300px" width="300px"/></a></div>
        <p>See More</p>
     </div>
 </div>
     <div class="box4 box"><div class="box-content">
         <h2>Discover Fashion Trends</h2>
-    <div class="box-img" style="background-image: url('box8_image.jpg');"></div>
+    <div class="box-img"> <a href="https://www.amazon.com/s?bbn=16225019011&rh=i%3Aspecialty-aps%2Cn%3A7141123011%2Cn%3A16225019011%2Cn%3A1040658&ref_=nav_em__nav_desktop_sa_intl_clothing_0_2_13_2"> <img src="box8_image.jpg" height="300px" width="300px"/></a></div>
        <p>See More</p>
     </div>
 </div>
