--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="box1 box ">
             <div class="box-content">
                 <h2>Clothes</h2>
-            <div class="box-img"> <a href="https://www.amazon.com/s/?_encoding=UTF8&k=Tops&rh=p_36%3A-2500&rnid=2661611011&ref=sr_nr_p_36_5&ref_=pd_hp_d_atf_unk"><img src="box1_image.jpg" height="300px" width="300px"/> </a></div>
+            <div class="box-img"> <a href="https://www.amazon.com/s?bbn=16225019011&rh=i%3Aspecialty-aps%2Cn%3A7141123011%2Cn%3A16225019011%2Cn%3A1040658&ref_=nav_em__nav_desktop_sa_intl_clothing_0_2_13_2"><img src="box1_image.jpg" height="300px" width="300px"/> </a></div>
                <p>See More</p>
             </div>
             
