--- a/index.html
+++ b/index.html
@@ -134,39 +134,39 @@
        <div class="foot-panel2">
            <ul>
             <p> Get To Know Us</p>
-            <a>Careers</a>
-            <a>Blog</a>
-            <a>About Amazon</a>
-            <a>Investor Relations</a>
-            <a>Amazon Devices</a>
-            <a>Amazon Science</a>
+            <a href="https://www.amazon.jobs/" style="text-decoration: none;">Careers</a>
+            <a href="https://blog.aboutamazon.com/?utm_source=gateway&utm_medium=footer" style="text-decoration: none;">Blog</a>
+            <a href="https://www.aboutamazon.com/?utm_source=gateway&utm_medium=footer" style="text-decoration: none;">About Amazon</a>
+            <a href="https://www.amazon.com/ir" style="text-decoration: none;">Investor Relations</a>
+            <a href="https://www.amazon.com/gp/browse.html?node=2102313011&ref_=footer_devices" style="text-decoration: none;">Amazon Devices</a>
+            <a href="https://www.amazon.science/" style="text-decoration: none;">Amazon Science</a>
            </ul>
            <ul>
             <p> Make Money with Us</p>
-            <a>Sell Products on Amazon</a>
-            <a>Sell on Amazon Business</a>
-            <a>Sell apps on Amazon</a>
-            <a>Become an Affiliate</a>
-            <a>Advertise Your Products</a>
-            <a>Self-Publish with Us</a>
+            <a href="https://services.amazon.com/sell.html?ld=AZFSSOA&ref_=footer_soa" style="text-decoration: none;">Sell Products on Amazon</a>
+            <a href="https://services.amazon.com/amazon-business.html?ld=usb2bunifooter&ref_=footer_b2b" style="text-decoration: none;">Sell on Amazon Business</a>
+            <a href="https://developer.amazon.com/" style="text-decoration: none;">Sell apps on Amazon</a>
+            <a href="https://affiliate-program.amazon.com/" style="text-decoration: none;">Become an Affiliate</a>
+            <a href="https://advertising.amazon.com/?ref=ext_amzn_ftr" style="text-decoration: none;">Advertise Your Products</a>
+            <a href="https://www.amazon.com/gp/seller-account/mm-summary-page.html?ld=AZFooterSelfPublish&topic=200260520&ref_=footer_publishing" style="text-decoration: none;">Self-Publish with Us</a>
            </ul>
         <ul>
             <p> Amazon Payment Products</p>
-            <a>Amazon Business Card</a>
-            <a>Shop with Points</a>
-            <a>Reoad Your Balance</a>
-            <a>Amazon Currency Converter</a>
+            <a href="https://www.amazon.com/dp/B07984JN3L?plattr=ACOMFO&ie=UTF-8" style="text-decoration: none;">Amazon Business Card</a>
+            <a href="https://www.amazon.com/gp/browse.html?node=16218619011&ref_=footer_swp" style="text-decoration: none;">Shop with Points</a>
+            <a href="https://www.amazon.com/gp/browse.html?node=10232440011&ref_=footer_reload_us" style="text-decoration: none;">Reoad Your Balance</a>
+            <a href="https://www.amazon.com/gp/browse.html?node=388305011&ref_=footer_tfx" style="text-decoration: none;">Amazon Currency Converter</a>
            </ul>
           <ul>
             <p> Let Us Help You</p>
-            <a>Amazon and COVID-19</a>
-            <a>Your Account</a>
-            <a>Your Orders</a>
-            <a>Shipping Rates & Policies</a>
-            <a>Returns & Replacements</a>
-            <a>Manage Your Content and Devices</a>
-            <a>Amazon Assistant</a>
-            <a>Help</a>
+            <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=GDFU3JS5AL6SYHRD&ref_=footer_covid" style="text-decoration: none;">Amazon and COVID-19</a>
+            <a href="https://www.amazon.com/gp/css/homepage.html?ref_=footer_ya" style="text-decoration: none;">Your Account</a>
+            <a href="https://www.amazon.com/gp/css/order-history?ref_=footer_yo" style="text-decoration: none;">Your Orders</a>
+            <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=468520&ref_=footer_shiprates" style="text-decoration: none;">Shipping Rates & Policies</a>
+            <a href="https://www.amazon.com/gp/css/returns/homepage.html?ref_=footer_hy_f_4" style="text-decoration: none;">Returns & Replacements</a>
+            <a href="https://www.amazon.com/gp/digital/fiona/manage?ref_=footer_myk" style="text-decoration: none;">Manage Your Content and Devices</a>
+            <a href="https://www.amazon.com/gp/BIT/ref=footer_bit_v2_us_A0029?bitCampaignCode=A0029" style="text-decoration: none;">Amazon Assistant</a>
+            <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref_=footer_gw_m_b_he" style="text-decoration: none;">Help</a>
          </ul>
        </div>
     <div class="foot-panel3">
