--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                 All
             </div>
             <div class="panel-ops">
-                <p>Today's Deal</p>
-                <p>Customer Service</p>
-                <p>Registry</p>
-                <p>Gift Cards</p>
-                <p>Sell</p>
+                <p> <a href="https://www.amazon.com/gp/goldbox?ref_=nav_cs_gb" style="text-decoration: none;"> Today's Deals</a></p>
+                <p> <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref_=nav_cs_customerservice" style="text-decoration: none;">Customer Service </a></p>
+                <p> <a href="https://www.amazon.com/gp/browse.html?node=16115931011&ref_=nav_cs_registry" style="text-decoration: none;">Registry </a></p>
+                <p> <a href="https://www.amazon.com/gift-cards/b/?ie=UTF8&node=2238192011&ref_=nav_cs_gc" style="text-decoration: none;">Gift Cards </a></p>
+                <p> <a href="https://www.amazon.com/b/?_encoding=UTF8&ld=AZUSSOA-sell&node=12766669011&ref_=nav_cs_sell" style="text-decoration: none;">Sell </a></p>
             </div>
             <div class="panel-deals border">
                 Shop Deals In Electronics
